--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ select {
 .skills-list {
     /* Стили для маркированного списка во второй секции */
     list-style-image: url(Vector2.png);
-    padding-left: 0 20px;
+    padding: 0 20px;
     font-weight: 400;
     font-size: 16px;
 }
